--- a/package.json
+++ b/package.json
@@ -1,23 +1,18 @@
 {
+  "name": "e-hentai-retriever",
+  "description": "e-hentai image retriever and auto pager",
+  "version": "3.0.0",
+  "author": "Zhong-Jhe Wu",
+  "license": "MIT",
+  "repository": "github:s25g5d4/e-hentai-retriever",
   "scripts": {
-    "docs": "jsdoc -R readme.md -d docs -t docs/jsdoc-template e-hentai-retriever.user.js",
-    "build": "browserify src/index.js -o build/ehr.min.user.js -t [ babelify --presets [ es2015 stage-3 ] ] -t uglifyify -p [ browserify-header --raw --file src/header.js ]",
-    "build-dev": "browserify src/index.js -o build/ehr.user.js -t [ babelify --presets [ es2015 stage-3 ] ] -p [ browserify-header --raw --file src/header.js ]",
-    "watch": "npm-watch"
-  },
-  "watch": {
-    "build-dev": [
-      "lib/*.js",
-      "src/*.js"
-    ]
+    "build": "webpack"
   },
   "dependencies": {
-    "babel-polyfill": "^6.7.4",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
-    "babelify": "^7.2.0",
-    "browserify-header": "^0.9.2",
-    "npm-watch": "^0.1.4",
-    "uglifyify": "^3.0.1"
+    "regenerator": "^0.8.46",
+    "webpack": "^1.13.1"
   }
 }
