--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
-    "regenerator": "^0.8.46",
+    "regenerator-runtime": "^0.9.5",
     "webpack": "^1.13.1"
   }
 }
