--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "e-hentai-retriever",
   "description": "e-hentai image retriever and auto pager",
-  "version": "3.0.2",
+  "version": "4.0.0",
   "author": "Zhong-Jhe Wu",
   "license": "MIT",
   "repository": "github:s25g5d4/e-hentai-retriever",
@@ -9,10 +9,9 @@
     "build": "webpack"
   },
   "dependencies": {
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-3": "^6.5.0",
-    "regenerator-runtime": "^0.9.5",
-    "webpack": "^1.13.1"
+    "@types/node": "^8.0.24",
+    "ts-loader": "^2.3.3",
+    "typescript": "^2.4.2",
+    "webpack": "^2.7.0"
   }
 }
