--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "@types/node": "^9.6.1",
-    "eventemitter3": "^3.0.1",
-    "rollup": "^0.57.1",
+    "@rollup/plugin-typescript": "^8.3.0",
+    "@types/node": "^12.20.43",
+    "postcss": "^8.4.6",
+    "rollup": "^2.66.1",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-postcss": "^1.5.0",
-    "rollup-plugin-typescript2": "^0.12.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.3.1",
     "typescript": "^4.5.5"
   }
 }
