--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,8 @@
     ],
     "sourceMap": false,
     "allowJs": true,
-    "moduleResolution": "Node",
-    "outDir": "build"
+    "moduleResolution": "Node"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
   "exclude": [
     "docs"
   ]
